src/assets/styles/components/_c.colors.scss
.colors {
	display: flex;
	flex-direction: row;
	padding: 0;
	
	li {
		@include flex(flex, center, center);
		@include share(width, height, 2rem);
		border-radius: 50%;

		&:hover {
			cursor: pointer;
		}

		span {
			position: relative;
			@include share(width, height, 1rem);
			border-radius: 50%;
		}
	}

	.--selected span:before {
		content: $icon-target;
		@include absolute(top left);
		@include share(width, height, 1rem);
		margin-top: -1px;
		font-family: $font-icons;
		font-size: $font-size-xxs;
	}
}

.--erase {
	border: 1px solid $color-black;
}

